--- a/.gitignore
+++ b/.gitignore
@@ -162,7 +162,15 @@ cython_debug/
 #.idea/
 
 # Custom
-
-*.json
-*.txt
+posts.json
+posts_p1.json
+subreddits.json
+subreddits_p1.json
+user_p1.json
+user_p2.json
+users.json
+noposts.txt
+comments-got.txt
+comments-errs.txt
+comments-retry.txt
 ./jsons/**.**
