--- a/.gitignore
+++ b/.gitignore
@@ -162,20 +162,6 @@ cython_debug/
 #.idea/
 
 # Custom
-awards.json
-trophies.json
-posts.json
-posts_p1.json
-subreddits.json
-subreddits_p1.json
-user_p1.json
-user_p2.json
-users.json
-noposts.txt
-comments-got.txt
-comments-errs.txt
-comments-retry.txt
-comments-status.txt
-count-sreddit.txt
-errs.txt
-json/*.json
+*.json
+*.log 
+*.txt
