--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,14 @@
-aiofiles==0.8.0
-aiohttp==3.9.3
-aiolimiter==1.1.0
-aiosignal==1.3.1
-aiosqlite==0.17.0
-asyncio==3.4.3
-asyncpraw==7.7.1
-asyncprawcore==2.4.0
-attrs==23.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
-certifi==2024.2.2
-charset-normalizer==3.3.2
-frozenlist==1.4.1
+certifi==2024.12.14
+charset-normalizer==3.4.1
+colorama==0.4.6
 html5lib==1.1
-idna==3.6
-multidict==6.0.5
+idna==3.10
 numerize==0.12
 python-dotenv==1.0.1
-requests==2.31.0
-six==1.16.0
-soupsieve==2.5
-typing_extensions==4.9.0
-update-checker==0.18.0
-urllib3==2.2.1
+requests==2.32.3
+six==1.17.0
+soupsieve==2.6
+urllib3==2.3.0
 webencodings==0.5.1
-yarl==1.9.4
